<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/label1"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/wait_string"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="false"
        android:visibility="invisible" >
        
    </ListView>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="15dp"
        android:visibility="invisible"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/labelTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/DarkBlue"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iVw1"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:adjustViewBounds="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:padding="5dp" >

            </LinearLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="0dp"
                        android:layout_weight=".33"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:background="@color/DarkerBlue"
                        android:padding="5dp"
                        android:text="@string/lblPubl"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="0dp"
                        android:layout_weight=".33"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:background="@color/DarkerBlue"
                        android:padding="5dp"
                        android:text="@string/lblExpire"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" >

                    <TextView
                        android:id="@+id/labelCr"
                        android:layout_width="0dp"
                        android:layout_weight=".30"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:background="@color/LightBlue"
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:id="@+id/labelExpir"
                        android:layout_width="0dp"
                        android:layout_weight=".30"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:background="@color/LightBlue"
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="0dp"
                        android:layout_weight=".30"
                        android:layout_height="wrap_content"
                        android:background="@color/dKGreen"
                        android:padding="5dp"
                        android:text="@string/lblAuthtor" />

                    <TextView
                        android:id="@+id/labelAuth"
                        android:layout_width="0dp"
                        android:layout_weight=".60"
                        android:layout_height="wrap_content"
                        android:background="@color/ltGreen"
                        android:padding="5dp"
                        android:text="TextView" />

                </TableRow>

            </TableLayout>

            <TextView
                android:id="@+id/labelPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/Pink"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="Large Text"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/Red" />

            <TextView
                android:id="@+id/textAd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="TextView"
                android:textSize="17sp" />

        </LinearLayout>

    </ScrollView>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/captionAddAd"
                android:textColor="@color/DarkBlue"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="2dp"
                android:background="@color/DkGrey"
                android:orientation="horizontal"
                android:padding="1dp"></LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblAddCat"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/catSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblAddCatE"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/catSpinnerE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblTitle"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblContact"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="E-Mail, Телефон"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/editContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblExpired"
                android:textStyle="bold" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblPrice"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblImg"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Напр: http://scadsdnd.ddns.net/bib/empty.png"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/editImgUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblDescript"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editDescr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_action_submit"
                android:text="@string/btnSubmit" />


        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/captionAddCat"
                android:textColor="@color/DarkBlue"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="2dp"
                android:background="@color/DkGrey"
                android:orientation="horizontal"
                android:padding="1dp"></LinearLayout>

            <CheckBox
                android:id="@+id/cbCoreCat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="CheckBox"
                tools:text="@string/cbCoreCat" />

            <LinearLayout
                android:id="@+id/llCat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lblCoreDesc" />

                <Spinner
                    android:id="@+id/catSpinnerAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblNewCat" />

            <EditText
                android:id="@+id/editNewCat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/btnSubmitCat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_action_submit"
                android:text="@string/btnSubmit" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
